CS 536/pr5/tests/errors/IncrDecrErrors.minc
void main() {
bool TEST = true;

TEST++;
++TEST;
--TEST;
TEST--;

string TEST2 = "STRING";

TEST2++;
++TEST2;
--TEST2;
TEST2--;
return;
}
